--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website" />
 
     <meta property="og:url" content="https://www.ecosdaperiferia.com.br" /> 
-    <meta property="og:image" content="./imagens/ecos-redes.png" />
+    <meta property="og:image" content="https://www.ecosdaperiferia.com.br/imagens/ecos-redes.png" />
     <meta property="og:image:width" content="710" /> 
     <meta property="og:image:height" content="373" /> 
 
@@ -18,7 +18,7 @@
     <meta name="twitter:url" content="https://www.ecosdaperiferia.com.br" />
     <meta name="twitter:title" content="Ecos da Periferia" />
     <meta name="twitter:description" content="Catálogo virtual de artistas e grupos periféricos de Maceió." />
-    <meta name="twitter:image" content="./imagens/ecos-redes.png" />
+    <meta name="twitter:image" content="https://www.ecosdaperiferia.com.br/imagens/ecos-redes.png" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="./imagens/favicon.png">
 
